CustomSFPath/force-app/main/default/objects/CustomPathSteps__mdt/CustomPathSteps__mdt.object-meta.xml
<CustomObject>
    <label>CustomPathSteps</label>
    <pluralLabel>CustomPathSteps</pluralLabel>
</CustomObject>