CustomSFPath/force-app/main/default/objects/CustomPathSteps__mdt/fields/GuideSelling__c.field-meta.xml
<CustomField>
    <fullName>GuideSelling__c</fullName>
    <label>GuideSelling</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>