CustomSFPath/force-app/main/default/objects/CustomPathSteps__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>CustomPath</label>
    <referenceTo>CustomPath__mdt</referenceTo>
    <relationshipLabel>CustomPathSteps</relationshipLabel>
    <relationshipName>CustomPathSteps</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>