CustomSFPath/force-app/main/default/objects/CustomPathSteps__mdt/fields/StepName__c.field-meta.xml
<CustomField>
    <fullName>StepName__c</fullName>
    <label>StepName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>