CustomSFPath/force-app/main/default/objects/CustomPathSteps__mdt/fields/StepNum__c.field-meta.xml
<CustomField>
    <fullName>StepNum__c</fullName>
    <description>Numéro de l&apos;étape</description>
    <label>StepNum</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>